<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="user_image">User Image</string>
    <string name="twitter">Twitter</string>
    <string name="tweet">Tweet</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="compose">Compose</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="retweet">retweet</string>
    <string name="reply">reply</string>
    <string name="dup_post">Duplicate post please consider changing it.</string>
    <string name="posted_status">Status successfully posted!</string>
    <string name="empty_status">Your tweet cannot be empty!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>