<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/user_image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBody"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/tvCreatedAt"
        android:layout_toEndOf="@+id/tvName"
        android:textColor="#8F8F8F"
        tools:text="dsantanaXD" />

<!--    the auto link and linksClickable to load the URL and allow the links
to open in a browser -->
    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/darkGrey"
        android:layout_toEndOf="@+id/ivProfileImage"
        tools:text="This is my first Tweet!"
        android:autoLink="all"
        android:linksClickable="true"/>

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBody"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:text="10h" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textStyle="bold"
        tools:text="Daniel Santana Medina" />

    <ImageView
        android:id="@+id/ivFav"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/tvBody"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/ivRetweet"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_vector_heart"
        />

    <ImageView
        android:id="@+id/ivRetweet"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/tvBody"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/ivReply"
        android:contentDescription="@string/retweet"
        android:src="@drawable/ic_vector_retweet" />

    <ImageView
        android:id="@+id/ivReply"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/tvBody"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:contentDescription="@string/reply"
        android:src="@drawable/vector_compose_dm_fab"
        />

</RelativeLayout>