<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlFrag"
    tools:context=".ComposeFragment">

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/tweetBlue"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/ivExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewTop"
        android:layout_margin="10dp"
        android:contentDescription="@string/twitter"
        android:src="@drawable/ic_vector_close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivExit"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/what_s_happening"
        android:labelFor="@+id/etCompose"
        android:textColorHint="@color/tweetBlue"
        app:counterEnabled="true"
        app:counterMaxLength="280"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="8"
            android:theme="@style/AppTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCompose"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tweet"
        android:textColor="@android:color/white"
        app:cornerRadius="5dp" />

</RelativeLayout>